--- a/terms.html
+++ b/terms.html
@@ -4,23 +4,88 @@
   <title>Terms and Conditions - Echo Mart</title>
 </head>
 <body>
+
 <h1>Terms and Conditions</h1>
 
-<p>Welcome to <strong>Echo Mart</strong>, operated by <strong>Ddocksolutions</strong>.</p>
+<p>
+These Terms and Conditions govern the use of the <strong>Echo Mart</strong> mobile application,
+operated by <strong>Ddocksolutions</strong>. By accessing or using the app, you agree to be bound
+by these terms.
+</p>
 
-<p>Echo Mart provides an online platform to order groceries and daily essentials from nearby stores.</p>
+<h2>1. Service Details</h2>
+<p>
+Echo Mart provides an online platform that enables users to browse, order, and purchase
+groceries and daily essentials from nearby partner stores for delivery or pickup.
+Echo Mart acts as a facilitator between customers and local vendors.
+</p>
 
-<p>All payments are processed securely through third-party payment gateways including PhonePe.</p>
+<h2>2. User Responsibilities</h2>
+<p>
+Users agree to:
+</p>
+<ul>
+  <li>Provide accurate personal, contact, and delivery information</li>
+  <li>Use the application only for lawful purposes</li>
+  <li>Ensure availability at the delivery location during delivery time</li>
+  <li>Not misuse the platform or attempt fraudulent activities</li>
+</ul>
 
-<p>Orders once placed may be cancelled as per the cancellation policy mentioned in the app. Refunds, if applicable, will be processed to the original payment method.</p>
+<h2>3. Payments & Pricing</h2>
+<p>
+All prices displayed in the app are inclusive of applicable taxes unless stated otherwise.
+Payments are processed securely through third-party payment gateways, including
+<strong>PhonePe</strong>. Echo Mart does not store card, UPI, or banking details.
+</p>
 
-<p>Users must provide accurate delivery and contact details.</p>
+<h2>4. Cancellation & Refunds</h2>
+<p>
+Orders may be cancelled before dispatch as per the cancellation policy shown in the app.
+Refunds, if applicable, will be processed to the original payment method within the
+prescribed time.
+</p>
 
-<p>Echo Mart reserves the right to update these terms at any time.</p>
+<h2>5. Usage Restrictions</h2>
+<p>
+Users must not:
+</p>
+<ul>
+  <li>Copy, modify, or reverse engineer the application</li>
+  <li>Use the app for unauthorized commercial purposes</li>
+  <li>Attempt to gain unauthorized access to the system</li>
+</ul>
 
-<p>For support, contact: <br>
-Email: ddocksolutions@gmail.com</p>
+<h2>6. Intellectual Property</h2>
+<p>
+All content, logos, text, images, and software used in the Echo Mart app are the intellectual
+property of <strong>Ddocksolutions</strong>. Unauthorized use is strictly prohibited.
+</p>
 
-<p>These terms are governed by the laws of India.</p>
+<h2>7. Limitation of Liability</h2>
+<p>
+Echo Mart shall not be liable for delays, service interruptions, or issues caused by third-party
+vendors, delivery partners, or external factors. Any liability, if applicable, shall be limited
+to the value of the order placed.
+</p>
+
+<h2>8. Dispute Resolution</h2>
+<p>
+Any disputes arising from the use of the Echo Mart application shall be governed by the laws
+of India and subject to the jurisdiction of Indian courts.
+</p>
+
+<h2>9. Changes to Terms</h2>
+<p>
+Echo Mart reserves the right to update or modify these Terms and Conditions at any time.
+Continued use of the app constitutes acceptance of the revised terms.
+</p>
+
+<h2>10. Contact Information</h2>
+<p>
+For any questions or concerns regarding these terms, please contact:
+<br>
+Email: <strong>ddocksolutions@gmail.com</strong>
+</p>
+
 </body>
 </html>
