Revise refund policy content in refund.html
Updated refund policy details and added contact information.

--- a/refund.html
+++ b/refund.html
@@ -1,17 +1,82 @@
 <!DOCTYPE html>
 <html>
-<head><title>Refund Policy - Echo Mart</title></head>
+<head>
+  <title>Refund Policy - Echo Mart</title>
+</head>
 <body>
+
 <h1>Refund Policy</h1>
 
-<p>Echo Mart is operated by Ddocksolutions.</p>
+<p>
+This Refund Policy outlines the guidelines and procedures for order
+cancellations, refunds, and replacements on the
+<strong>Echo Mart</strong> mobile application, operated by
+<strong>Ddocksolutions</strong>.
+</p>
 
-<p>Orders once placed may be cancelled before dispatch. Refunds, if applicable, will be processed to the original payment method.</p>
+<h2>1. Refund Eligibility</h2>
+<p>
+Users may be eligible for a refund in the following situations:
+</p>
+<ul>
+  <li>Order cancelled within the permitted cancellation window</li>
+  <li>Item not available or order not fulfilled</li>
+  <li>Incorrect, damaged, or expired items delivered</li>
+  <li>Failed, duplicate, or excess payment transactions</li>
+</ul>
 
-<p>Refunds are usually completed within 5–7 working days.</p>
+<h2>2. Non-Refundable / Non-Cancellable Items</h2>
+<p>
+Certain products, including perishable goods (such as fresh fruits,
+vegetables, meat, or dairy items), may not be eligible for return or
+cancellation once delivered, unless damaged or incorrect.
+</p>
 
-<p>For refund related queries, contact:<br>
-Email: ddocksolutions@gmail.com</p>
+<h2>3. Cancellation Process</h2>
+<p>
+Orders may be cancelled through the app before dispatch or order
+processing begins. Once an order has been dispatched or prepared by
+the store, cancellation may not be permitted.
+</p>
+
+<h2>4. Return / Replacement Requests</h2>
+<p>
+In case of damaged or incorrect items, users must raise a return or
+replacement request through the app or by contacting customer support
+within the specified time after delivery.
+</p>
+
+<h2>5. Refund Method</h2>
+<p>
+Approved refunds will be processed to the original payment method used
+at the time of purchase. Echo Mart does not provide cash refunds.
+</p>
+
+<h2>6. Refund Timeframe</h2>
+<p>
+Refunds are typically processed within <strong>5–7 working days</strong>.
+Actual credit time may vary depending on the bank or payment provider.
+</p>
+
+<h2>7. Cancellation Fees</h2>
+<p>
+Echo Mart reserves the right to apply cancellation charges if an order
+is cancelled after processing has begun, as displayed in the app.
+</p>
+
+<h2>8. Right to Decline Refund</h2>
+<p>
+Echo Mart reserves the right to decline refund or cancellation requests
+in cases of policy misuse, repeated cancellations, or fraudulent
+activity.
+</p>
+
+<h2>9. Contact Information</h2>
+<p>
+For any refund or cancellation queries, please contact:
+<br>
+Email: <strong>ddocksolutions@gmail.com</strong>
+</p>
 
 </body>
 </html>
