Revise privacy policy with detailed user data information
Expanded the privacy policy to include detailed information on data collection, usage, storage, sharing, cookies, user rights, and contact information.

--- a/privacy.html
+++ b/privacy.html
@@ -1,19 +1,97 @@
 <!DOCTYPE html>
 <html>
-<head><title>Privacy Policy - Echo Mart</title></head>
+<head>
+  <title>Privacy Policy - Echo Mart</title>
+</head>
 <body>
+
 <h1>Privacy Policy</h1>
 
-<p>Echo Mart respects your privacy.</p>
+<p>
+This Privacy Policy explains how <strong>Echo Mart</strong>, operated by
+<strong>Ddocksolutions</strong>, collects, uses, stores, and protects personal
+information when users access the Echo Mart mobile application.
+</p>
 
-<p>We collect user details such as name, phone number, and delivery address to provide our services.</p>
+<h2>1. Information We Collect</h2>
+<p>
+We collect the following types of user data:
+</p>
+<ul>
+  <li>Personal information such as name, phone number, and email address</li>
+  <li>Delivery address and location details provided by the user</li>
+  <li>Order history and transaction details</li>
+  <li>Device and app usage data for performance, analytics, and security</li>
+</ul>
 
-<p>Payment information is securely processed by third-party payment gateways like PhonePe. We do not store payment details.</p>
+<h2>2. Use of Collected Information</h2>
+<p>
+User data is used for the following purposes:
+</p>
+<ul>
+  <li>Processing and delivering orders</li>
+  <li>Facilitating payments, refunds, and customer support</li>
+  <li>Improving application performance and user experience</li>
+  <li>Communicating important service-related updates</li>
+</ul>
 
-<p>User data is not sold or misused.</p>
+<h2>3. Data Storage and Security</h2>
+<p>
+We store user data securely using industry-standard security measures.
+Reasonable safeguards are implemented to protect data against
+unauthorized access, alteration, or disclosure.
+</p>
 
-<p>Contact us at:<br>
-Email: ddocksolutions@gmail.com</p>
+<h2>4. Data Sharing</h2>
+<p>
+User information may be shared only with:
+</p>
+<ul>
+  <li>Partner vendors and delivery personnel to fulfill orders</li>
+  <li>Third-party payment service providers such as <strong>PhonePe</strong></li>
+  <li>Government or legal authorities when required by law</li>
+</ul>
+<p>
+We do not sell or rent user data to third parties.
+</p>
+
+<h2>5. Cookies and Tracking Technologies</h2>
+<p>
+Echo Mart may use cookies or similar technologies to:
+</p>
+<ul>
+  <li>Maintain user session and preferences</li>
+  <li>Analyze app usage for performance improvements</li>
+  <li>Enhance security and prevent fraudulent activity</li>
+</ul>
+<p>
+Users may manage or disable cookies through their device or browser
+settings, which may affect certain app features.
+</p>
+
+<h2>6. User Rights</h2>
+<p>
+Users have the right to:
+</p>
+<ul>
+  <li>Access or update their personal information</li>
+  <li>Request deletion of their account, subject to legal obligations</li>
+  <li>Opt out of non-essential communications</li>
+</ul>
+
+<h2>7. Changes to This Privacy Policy</h2>
+<p>
+Echo Mart reserves the right to update this Privacy Policy at any time.
+Continued use of the application constitutes acceptance of the updated
+policy.
+</p>
+
+<h2>8. Contact Information</h2>
+<p>
+For any privacy-related questions or concerns, please contact:
+<br>
+Email: <strong>ddocksolutions@gmail.com</strong>
+</p>
 
 </body>
 </html>
