Revise shipping policy content and structure
Updated the shipping policy details, including delivery services, time, charges, exceptions, customer responsibilities, and contact information.

--- a/shipping.html
+++ b/shipping.html
@@ -1,16 +1,76 @@
 <!DOCTYPE html>
 <html>
-<head><title>Shipping Policy - Echo Mart</title></head>
+<head>
+  <title>Shipping Policy - Echo Mart</title>
+</head>
 <body>
+
 <h1>Shipping Policy</h1>
 
-<p>Echo Mart delivers groceries and daily essentials through local partner stores.</p>
+<p>
+This Shipping Policy applies to orders placed through the
+<strong>Echo Mart</strong> mobile application, operated by
+<strong>Ddocksolutions</strong>.
+</p>
 
-<p>Delivery time depends on store availability and delivery location.</p>
+<h2>1. Delivery Services</h2>
+<p>
+Echo Mart partners with local stores to deliver groceries and daily essentials
+to customers’ specified delivery addresses.
+</p>
 
-<p>Estimated delivery time will be shown before order confirmation.</p>
+<h2>2. Delivery Time</h2>
+<p>
+Delivery time depends on the following factors:
+</p>
+<ul>
+  <li>Item availability at the partner store</li>
+  <li>Delivery location and distance</li>
+  <li>Order volume and peak times</li>
+</ul>
+<p>
+The estimated delivery time will be displayed in the app before order confirmation.
+This is an estimate and may vary in certain circumstances.
+</p>
 
-<p>Delivery charges, if any, are displayed clearly in the app.</p>
+<h2>3. Shipping Charges</h2>
+<p>
+Delivery charges, if applicable, will be clearly shown in the app during checkout.
+No hidden charges will be applied.
+</p>
+
+<h2>4. Order Preparation & Dispatch</h2>
+<p>
+Orders are prepared by partner stores after confirmation. Once the order is dispatched,
+users will receive a notification with delivery tracking details (if available).
+</p>
+
+<h2>5. Delivery Exceptions</h2>
+<p>
+Delivery may be delayed due to:
+</p>
+<ul>
+  <li>Adverse weather conditions</li>
+  <li>Traffic or transport issues</li>
+  <li>Unavailability of items at the store</li>
+</ul>
+<p>
+Echo Mart is not liable for delays caused by factors beyond its control.
+</p>
+
+<h2>6. Customer Responsibilities</h2>
+<p>
+Users must provide accurate delivery information and be available to receive orders
+at the provided address. Incorrect or incomplete information may result in delayed or
+failed delivery.
+</p>
+
+<h2>7. Contact Information</h2>
+<p>
+For delivery-related queries or issues, please contact:
+<br>
+Email: <strong>ddocksolutions@gmail.com</strong>
+</p>
 
 </body>
 </html>
