--- a/shipping.html
+++ b/shipping.html
@@ -1,76 +1,51 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Shipping Policy - Echo Mart</title>
+    <meta charset="UTF-8">
+    <title>Shipping Policy | ddocksolutions</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        body {
+            font-family: Arial, Helvetica, sans-serif;
+            line-height: 1.6;
+            color: #333;
+            margin: 20px;
+            max-width: 800px;
+            margin-left: auto;
+            margin-right: auto;
+        }
+        h1, h2 {
+            margin-top: 25px;
+            color: #0056b3;
+        }
+        p {
+            margin-bottom: 14px;
+        }
+        strong {
+            font-weight: bold;
+        }
+    </style>
 </head>
 <body>
-
-<h1>Shipping Policy</h1>
-
-<p>
-This Shipping Policy applies to orders placed through the
-<strong>Echo Mart</strong> mobile application, operated by
-<strong>Ddocksolutions</strong>.
-</p>
-
-<h2>1. Delivery Services</h2>
-<p>
-Echo Mart partners with local stores to deliver groceries and daily essentials
-to customers’ specified delivery addresses.
-</p>
-
-<h2>2. Delivery Time</h2>
-<p>
-Delivery time depends on the following factors:
-</p>
-<ul>
-  <li>Item availability at the partner store</li>
-  <li>Delivery location and distance</li>
-  <li>Order volume and peak times</li>
-</ul>
-<p>
-The estimated delivery time will be displayed in the app before order confirmation.
-This is an estimate and may vary in certain circumstances.
-</p>
-
-<h2>3. Shipping Charges</h2>
-<p>
-Delivery charges, if applicable, will be clearly shown in the app during checkout.
-No hidden charges will be applied.
-</p>
-
-<h2>4. Order Preparation & Dispatch</h2>
-<p>
-Orders are prepared by partner stores after confirmation. Once the order is dispatched,
-users will receive a notification with delivery tracking details (if available).
-</p>
-
-<h2>5. Delivery Exceptions</h2>
-<p>
-Delivery may be delayed due to:
-</p>
-<ul>
-  <li>Adverse weather conditions</li>
-  <li>Traffic or transport issues</li>
-  <li>Unavailability of items at the store</li>
-</ul>
-<p>
-Echo Mart is not liable for delays caused by factors beyond its control.
-</p>
-
-<h2>6. Customer Responsibilities</h2>
-<p>
-Users must provide accurate delivery information and be available to receive orders
-at the provided address. Incorrect or incomplete information may result in delayed or
-failed delivery.
-</p>
-
-<h2>7. Contact Information</h2>
-<p>
-For delivery-related queries or issues, please contact:
-<br>
-Email: <strong>ddocksolutions@gmail.com</strong>
-</p>
-
+    <h1>Shipping Policy</h1>
+    
+    <p>
+        The orders for the user are shipped through registered domestic courier companies and/or speed post only. 
+        Orders are shipped within <strong>1 days</strong> from the date of the order and/or payment or as per the delivery date agreed at the time of order confirmation and delivering of the shipment, subject to courier company / post office norms.
+    </p>
+    <p>
+        Platform Owner shall not be liable for any delay in delivery by the courier company / postal authority.
+    </p>
+    <p>
+        Delivery of all orders will be made to the address provided by the buyer at the time of purchase. 
+        Delivery of our services will be confirmed on your email ID as specified at the time of registration.
+    </p>
+    <p>
+        If there are any shipping cost(s) levied by the seller or the Platform Owner (as the case be), the same is not refundable.
+    </p>
+    
+    <p>
+        For any queries or assistance regarding shipping, please contact our customer service team through the official website contact section at ddocksolutions.in.
+    </p>
 </body>
 </html>
